<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    app:cardBackgroundColor="#FFEEA9"
    android:id="@+id/cvSlot">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Date"
            android:textColor="#C45508"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:id="@+id/txt_date"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Start time - end time"
            android:textColor="#C45508"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:id="@+id/txt_time"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reserved"
            android:textSize="20sp"
            android:id="@+id/txt_availability"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>